--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -742,6 +742,21 @@ section {
   background-color: #0563bb;
 }
 
+.portfolio-details .portfolio-details-slider .swiper-wrapper .swiper-slide .fullsize-iframe {
+  position: relative;
+  width: 100%;
+  height: 0;
+  padding-bottom: 57%;
+}
+
+.portfolio-details .portfolio-details-slider .swiper-wrapper .swiper-slide .fullsize-iframe iframe{
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  left: 0;
+  top: 0;
+}
+
 .portfolio-details .portfolio-info {
   padding: 30px;
   box-shadow: 0px 0 30px rgba(69, 80, 91, 0.08);
