Update award descriptions

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1041,7 +1041,7 @@ section {
   color: #728394;
 }
 
-.contact .info .email, .contact .info .phone {
+.contact .info .email, .contact .info .phone, .contact .info .address {
   margin-top: 40px;
 }
 
